[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-domain-monitor"
version = "0.1.0"
description = "HTTP, DNS and Namecheap domain monitor connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun @ git+https://github.com/if-uri/urirun.git@v0.3.14#subdirectory=adapters/python",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/domain-monitor"
Repository = "https://github.com/if-uri/urirun-connector-domain-monitor"

[project.scripts]
urirun-domain-monitor = "urirun_connector_domain_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_domain_monitor*"]

[tool.setuptools.package-data]
urirun_connector_domain_monitor = ["connector.manifest.json"]
